# therobotoverlord-api

./: .bandit  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README-DOCKER.md  README.md  TODO.md  docker-compose.yml  init-extensions.sql  justfile  pyproject.toml
migrations/: 001_initial_schema.sql  002_schema_alignment_fixes.sql  002_seed_data.sql  003_add_user_sessions.sql  004_add_tos_violation_fields.sql  004_leaderboard_system.sql  005_add_tos_screening_queue.sql  006_loyalty_score_system.sql  008_add_flag_system.sql  008_appeals_system.sql  009_content_versioning_system.sql  010_enhance_translations_table.sql  011_add_rbac_system.sql  012_add_badge_system.sql  013_add_tag_system.sql  014_add_sanction_system.sql  015_add_admin_dashboard_system.sql  016_add_appeal_history_tracking.sql  016_add_overlord_chat_messages.sql  yoyo.ini
prompts/: main.md  main_template.md
scripts/: pre-commit.sh  run_docker.sh  start_api.sh  start_workers.py  start_workers.sh  test.sh
src/therobotoverlord_api/: __init__.py  main.py
tests/: __init__.py  conftest.py  test_admin_dashboard_basic.py  test_leaderboard_api.py  test_leaderboard_integration.py  test_leaderboard_models.py  test_leaderboard_performance.py  test_leaderboard_repository.py  test_leaderboard_service.py  test_main.py
tests/api/: test_appeals_comprehensive.py  test_appeals_edge_cases.py  test_appeals_editing.py  test_appeals_moderator.py
tests/fixtures/: leaderboard_fixtures.py  tag_fixtures.py
tests/services/: test_appeal_service_editing.py  test_content_restoration_service.py  test_content_versioning_service.py
tests/test_api/: conftest.py  test_admin_dashboard.py.disabled  test_badges_coverage.py  test_badges_simple.py  test_flags.py  test_loyalty_score_coverage.py  test_loyalty_score_simple.py  test_messages.py  test_posts_comprehensive.py  test_queue.py  test_queue_comprehensive.py  test_queue_coverage.py  test_rbac.py  test_tags.py  test_tags_auth_fixed.py  test_tags_fixed_auth.py  test_tags_minimal.py  test_topics_comprehensive.py  test_topics_enhanced.py  test_tos_screening.py  test_translations_coverage.py  test_users.py
tests/test_auth/: __init__.py  conftest.py  test_api_endpoints.py  test_auth_service_comprehensive.py  test_auth_service_targeted.py  test_google_oauth.py  test_jwt_service.py  test_middleware.py  test_session_service.py
tests/test_config/: test_database.py  test_redis.py
tests/test_database/: test_connection.py  test_health.py  test_loyalty_score_repository.py
tests/test_edge_cases/: test_flag_edge_cases.py
tests/test_integration/: test_flag_loyalty_integration.py
tests/test_repositories/: test_admin_action_repository.py.disabled  test_admin_action_repository_disabled.py  test_appeal_repository_comprehensive.py  test_badge_repository_simple.py  test_content_version_repository_comprehensive.py  test_content_version_repository_simple.py  test_dashboard_repository_simple.py.disabled  test_system_announcement_repository.py.disabled  test_translation_repository_simple.py
tests/test_services/: test_appeal_service.py  test_badge_service_comprehensive.py  test_badge_service_simple.py  test_badge_service_websocket.py  test_dashboard_service.py.disabled  (+13 more)
(+234 files in other folders)
