[project]
name = "therobotoverlord-api"
version = "0.1.0"
description = "The Robot Overlord API"
authors = [
    { name = "Joshua Szepietowski", email = "joshSzep@gmail.com" },
]
requires-python = ">=3.13"
dependencies = [
    "arq",
    "asyncpg",
    "fastapi",
    "google-auth",
    "google-auth-oauthlib",
    "requests",
    "httpx",
    "pydantic",
    "pydantic-ai>=0.7.2",
    "pydantic-settings",
    "python-dotenv",
    "python-jose[cryptography]",
    "python-multipart",
    "redis",
    "uvicorn[standard]",
    "websockets",
]

[project.scripts]
therobotoverlord-api = "therobotoverlord_api:main"

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "bandit",
    "mypy",
    "pre-commit",
    "psycopg2-binary>=2.9.10",
    "psycopg[binary,pool]",
    "pyright",
    "pytest",
    "pytest-asyncio",
    "pytest-benchmark",
    "pytest-cov",
    "pytest-mock",
    "pytest-postgresql",
    "ruff",
    "testcontainers",
    "ty",
    "yoyo-migrations",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D",
    "ANN",
    "COM812",
    "ISC001",
    "S608",
    "TRY003",
    "G004",
    "EM101",
    "TRY400",
    "BLE001",
    "TRY300",
    "SIM117",
    "EM102",
    "S101",
    "PLR2004",
    "E501",
    "SLF001",
    "F841",
    "S106",
    "C901",
    "B023",
    "ARG001",
    "SIM118",
    "FBT003",
    "S104",
    "S105",
    "ARG002",
    "UP043",
    "TRY301",
    "TRY401",
    "FIX002",
    "PLR0911",
    "PLR0913",
    "TD003",
    "RET504",
    "PLC0415",
]

[tool.ruff.lint.isort]
single-line-exclusions = []
force-single-line = true
known-first-party = [
    "therobotoverlord_api",
]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]
lines-between-types = 1

[tool.pyright]
reportMissingImports = false
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportAttributeAccessIssue = false
reportUnresolvedImport = false
reportReturnType = false

[tool.bandit]
exclude_dirs = [
    "tests",
]
skips = [
    "B608",
    "S101",
]
